--- a/Task (22.08) Classwork/style/style.scss
+++ b/Task (22.08) Classwork/style/style.scss
@@ -100,6 +100,7 @@ header
     article
     {
         border: 1px solid rgba(128, 128, 128, 0.459);
+        overflow: hidden;
     }
 }
 
@@ -185,6 +186,21 @@ footer
 @media screen and (max-width: 400px)
 {
 
+    main
+    {
+        grid-template-rows: 11% 50% 25% 20%;
+    }
+
+    .section_infinitie_scroll
+    {
+        display: none;
+    }
+
+    footer
+    {
+        margin-top: 5px;
+    }
+
 }
 
 @media screen and (max-width: 1200px) and (min-width: 401px)
@@ -239,6 +255,7 @@ footer
 
         article
         {
+            margin: 5px;
             width: 50%;
         }
     }
@@ -304,6 +321,7 @@ footer
 
         article
         {
+            margin: 5px;
             width: 50%;
         }
     }
