--- a/Task (22.08) Classwork/style/style.css
+++ b/Task (22.08) Classwork/style/style.css
@@ -10,6 +10,7 @@ body {
 main {
   width: 100%;
   height: 95vh;
+  min-height: 440px;
   display: -ms-grid;
   display: grid;
   -ms-grid-rows: 10% 45% 15% 20% 15%;
@@ -31,7 +32,7 @@ header .logo {
 }
 
 header .logo img {
-  height: 40px;
+  height: 30px;
 }
 
 header .info {
@@ -163,7 +164,6 @@ header .info a {
 .section_bottom {
   font-size: 14px;
   overflow: auto;
-  height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -180,7 +180,7 @@ header .info a {
 
 .section_bottom article {
   width: 200px;
-  height: 80px;
+  overflow: hidden;
   border: 1px solid rgba(128, 128, 128, 0.459);
 }
 
