--- a/Task (22.08) Classwork/style/style.scss
+++ b/Task (22.08) Classwork/style/style.scss
@@ -8,6 +8,7 @@ main
 {
     width: 100%;
     height: 95vh;
+    min-height: 440px;
 
     display: grid;
     grid-template-rows: 10% 45% 15% 20% 15%;
@@ -26,7 +27,7 @@ header
 
         img
         {
-            height: 40px;
+            height: 30px;
         }
     }
 
@@ -159,7 +160,7 @@ header
 
     overflow: auto;
 
-    height: 100%;
+    
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -170,7 +171,8 @@ header
     article
     {
         width: 200px;
-        height: 80px;
+        
+        overflow: hidden;
         
         border: 1px solid rgba(128, 128, 128, 0.459);
     }
@@ -208,6 +210,7 @@ footer
     header
     {
         padding-top: 15px;
+        
 
         display: grid;
         grid-template-columns: 30% 40% 30%;
