--- a/Task (22.08) Classwork/style/style.css
+++ b/Task (22.08) Classwork/style/style.css
@@ -222,6 +222,9 @@ footer {
     -ms-grid-column: 3;
     grid-area: inf;
   }
+  .section_left {
+        grid-template-areas: "la1 ." "la1 la2" "la3 la2" "la3 la4" ". la4";
+  }
   .section_right_top {
     display: -ms-grid;
     display: grid;
@@ -280,6 +283,9 @@ footer {
     -ms-grid-row: 1;
     -ms-grid-column: 3;
     grid-area: inf;
+  }
+  .section_left {
+        grid-template-areas: "la1 ." "la1 la2" "la3 la2" "la3 la4" ". la4";
   }
   .section_right_top {
     display: -ms-grid;
