--- a/Task (04.09)/style/style.css
+++ b/Task (04.09)/style/style.css
@@ -19,6 +19,7 @@ body {
 }
 
 .signalling {
+  background-color: #fff;
   height: 60%;
   width: 80%;
   margin: 80px;
@@ -26,15 +27,29 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-orient: vertical;
+  -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.interactive div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  padding-left: 10px;
+}
+
+.open_door {
+  margin-left: 10px;
 }
 /*# sourceMappingURL=style.css.map */
