--- a/Task (25.09)/style/style.css
+++ b/Task (25.09)/style/style.css
@@ -12,9 +12,20 @@ body {
           align-items: center;
 }
 
-img {
-  width: 50px;
-  height: 50px;
+.chessFig {
+  margin: 0px;
+  padding: 0px;
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .chessDesk {
@@ -36,10 +47,20 @@ img {
 }
 
 .white {
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.664);
 }
 
 .black {
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0.664);
+}
+
+.blackFig {
+  color: black;
+  -webkit-text-stroke: 0.2px white;
+}
+
+.whiteFig {
+  color: white;
+  -webkit-text-stroke: 0.7px black;
 }
 /*# sourceMappingURL=style.css.map */
