--- a/Task (02.10)/style/style.scss
+++ b/Task (02.10)/style/style.scss
@@ -5,38 +5,52 @@ body
     user-select: none;
 }
 
+
+.main
+{
+    width: 800px;
+    height: 200px;
+    border: 1px solid black;
+    margin: auto;
+    margin-top: 20px;
+}
+
 img
 {
     height: 40px;
     width: 100px;
 }
 
-.ground
-{
-    width: 100%;
-    height: 100%;
-    background: rgb(58, 6, 6);
-    border: 5px solid rgb(58, 6, 6);
-    position: absolute;
-    top: 500px;
-}
+// .ground
+// {
+//     width: 100%;
+//     height: 100%;
+//     background: rgb(58, 6, 6);
+//     border: 5px solid rgb(58, 6, 6);
+//     position: absolute;
+//     top: 500px;
+// }
 
 .tank
 {
-    position: absolute;
+    position: relative;
 
-    top: 465px;
+    top: 100px;
     left: 0px;
+
+    transition: left 1s linear;
 }
+
 
 nav
 {
     display: flex;
     justify-content: center;
     margin-top: 100px;
+    z-index: 100;
 }
 
-.btnleft, .btnright
+.btnLeft, .btnRight
 {   
     text-align: center;
 
