--- a/Task (09.10) Classwork/style/style.css
+++ b/Task (09.10) Classwork/style/style.css
@@ -1,1 +1,48 @@
-/* No CSS *//*# sourceMappingURL=style.css.map */
+body {
+  width: 100%;
+  height: 95vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.field {
+  width: 400px;
+  height: 500px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  background-color: rgba(22, 105, 119, 0.384);
+}
+
+.row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+.cell {
+  height: 50px;
+  width: 50px;
+  border: 2px solid black;
+}
+
+.status-row {
+  width: 95%;
+  height: 20px;
+  border: 1px solid black;
+  border-radius: 20px;
+  margin: 0 auto 0 auto;
+}
+/*# sourceMappingURL=style.css.map */
