--- a/Task (09.10) Classwork/style/style.scss
+++ b/Task (09.10) Classwork/style/style.scss
@@ -10,6 +10,52 @@ main
 
 }
 
+nav
+{
+    margin: auto;
+    margin-top: 20px;
+
+    height: 100px;
+    width: 150px;
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
+
+    grid-template-areas:
+    ". up ."
+    "left down right";
+
+
+}
+
+.icon-left-big, .icon-up-big, .icon-down-big, .icon-right-big
+{
+    background-color: gray;
+    border: 2px solid rgba(0, 0, 0, 0.623);
+    border-radius: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.icon-left-big
+{
+    grid-area: left;
+}
+.icon-up-big
+{
+    grid-area: up;
+}
+.icon-down-big
+{
+    grid-area: down;
+}
+.icon-right-big
+{
+    grid-area: right;
+}
+
 .field
 {
     width: 400px;
