--- a/Task (09.10) Classwork/style/style.css
+++ b/Task (09.10) Classwork/style/style.css
@@ -91,6 +91,10 @@ nav {
   border: 2px solid black;
 }
 
+.cell.selected {
+  background-color: #0013c0;
+}
+
 .status-row {
   width: 95%;
   height: 20px;
