task 09.10 orange cells

--- a/Task (09.10) Classwork/style/style.scss
+++ b/Task (09.10) Classwork/style/style.scss
@@ -82,6 +82,12 @@ nav
     border: 2px solid black;
 }
 
+
+.cell.passed
+{
+    background-color: rgba(168, 111, 4, 0.849);
+}
+
 .cell.selected
 {
     background-color: rgb(0, 19, 192);
