task 09.10 classwork (13.10 work)

--- a/Task (09.10) Classwork/style/style.css
+++ b/Task (09.10) Classwork/style/style.css
@@ -62,7 +62,19 @@ nav {
   grid-area: right;
 }
 
-.icon-left-big.disabl, .icon-up-big.disabl, .icon-down-big.disabl, .icon-right-big.disabl {
+.icon-left-big.disabl {
+  display: none;
+}
+
+.icon-up-big.disabl {
+  display: none;
+}
+
+.icon-down-big.disabl {
+  display: none;
+}
+
+.icon-right-big.disabl {
   display: none;
 }
 
