--- a/Task (13.10) Classwork/style/style.css
+++ b/Task (13.10) Classwork/style/style.css
@@ -1,30 +1,43 @@
-.buttons {
-  width: 95%;
+main {
+  width: 100%;
+}
+
+.parkingLots {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-pack: distribute;
       justify-content: space-around;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
-.btn1, .btn2 {
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-  padding: 10px;
-  border: 3px solid darkgreen;
-}
-
-.btn2.disabl {
-  opacity: 0.5;
-}
-
-.hello {
+.parkingPlace {
+  margin: 5px 30px 5px 30px;
+  border: 2px solid black;
+  width: 100px;
+  height: 200px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   text-align: center;
 }
 
-.hello.disabl {
-  opacity: 0;
+.currTime {
+  height: 50px;
+  width: 110px;
+  border: 3px solid gray;
+  background-color: white;
+  position: absolute;
+  right: 10px;
+  bottom: 20px;
+  font-size: 24px;
+  text-align: center;
+  padding: 7px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 /*# sourceMappingURL=style.css.map */
