--- a/Task (13.10) Classwork/style/style.css
+++ b/Task (13.10) Classwork/style/style.css
@@ -15,11 +15,14 @@ main {
 .parkingPlace {
   margin: 5px 30px 5px 30px;
   border: 2px solid black;
-  width: 100px;
+  width: 110px;
   height: 200px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -31,10 +34,25 @@ main {
   width: 110px;
   border: 3px solid gray;
   background-color: white;
-  position: absolute;
+  position: fixed;
   right: 10px;
   bottom: 20px;
   font-size: 24px;
+  text-align: center;
+  padding: 7px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.occupiedPlaces {
+  height: 70px;
+  width: 200px;
+  border: 3px solid gray;
+  background-color: white;
+  position: fixed;
+  left: 10px;
+  bottom: 20px;
+  font-size: 20px;
   text-align: center;
   padding: 7px;
   -webkit-box-sizing: border-box;
