--- a/Task (13.10) Classwork/style/style.scss
+++ b/Task (13.10) Classwork/style/style.scss
@@ -15,10 +15,11 @@ main
 {
     margin: 5px 30px 5px 30px;
     border: 2px solid black;
-    width: 100px;
+    width: 110px;
     height: 200px;
 
     display: flex;
+    justify-content: center;
     align-items: center;
     text-align: center;
 }
@@ -31,7 +32,7 @@ main
     border: 3px solid gray;
     background-color: white;
 
-    position: absolute;
+    position: fixed;
     right: 10px;
     bottom: 20px;
 
@@ -40,4 +41,22 @@ main
     padding: 7px;
     box-sizing: border-box;
 
+}
+
+.occupiedPlaces
+{
+    height: 70px;
+    width: 200px;
+    border: 3px solid gray;
+    background-color: white;
+
+    position: fixed;
+    left: 10px;
+    bottom: 20px;
+
+
+    font-size: 20px;
+    text-align: center;
+    padding: 7px;
+    box-sizing: border-box;
 }
