--- a/Task (17.10) Classwork/style/style.css
+++ b/Task (17.10) Classwork/style/style.css
@@ -72,4 +72,23 @@ main {
   height: 65px;
   width: 65px;
 }
+
+.cell.rotated {
+  -webkit-transform: rotate(90deg);
+          transform: rotate(90deg);
+}
+
+.image {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  width: 100%;
+  height: 100%;
+}
+
+image.rotated {
+  -webkit-transform: rotate(90deg);
+          transform: rotate(90deg);
+}
 /*# sourceMappingURL=style.css.map */
