--- a/Task (17.10) Classwork/style/style.scss
+++ b/Task (17.10) Classwork/style/style.scss
@@ -58,8 +58,6 @@ main {
     height: 65px;
     width: 65px;
 
-    
-
 }
 
 .cell.rotated
@@ -67,14 +65,14 @@ main {
     transform: rotate(90deg);
 }
 
-.image{
-    user-select: none;
-    width: 100%;
-    height: 100%;
-    // transform:rotate(90deg);
-}
+// .image{
+//     user-select: none;
+//     width: 100%;
+//     height: 100%;
+//     // transform:rotate(90deg);
+// }
 
-image.rotated{
-    transform:rotate(90deg);
-}
+// .image.rotated{
+//     transform:rotate(90deg);
+// }
 
