--- a/Task24.11Classwork2/task24.11/public/stylesheets/style.css
+++ b/Task24.11Classwork2/task24.11/public/stylesheets/style.css
@@ -1,8 +1,71 @@
+* {
+  padding: 0px;
+  margin: 0px;
+}
+
+
 body {
   padding: 50px;
+  padding-top: 10px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
 a {
   color: #00B7FF;
+}
+
+img {
+  height: 20px;
+  width: 40px;
+}
+
+li {
+  list-style-type: none;
+}
+
+ul {
+  border: 2px solid black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+
+  margin: 10px;
+  padding: 5px;
+
+  box-shadow: 0 0 5px black;
+}
+
+main {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+
+.form_radio_btn {
+	display: inline-block;
+  margin: 5px 10px 30px 10px;
+}
+.form_radio_btn input[type=radio] {
+	display: none;
+}
+.form_radio_btn label {
+	display: inline-block;
+	cursor: pointer;
+	padding: 0px 15px;
+	line-height: 34px;
+	border: 1px solid #999;
+	border-radius: 6px;
+	user-select: none;
+}
+ 
+/* Checked */
+.form_radio_btn input[type=radio]:checked + label {
+	background: #ffe0a6;
+}
+ 
+/* Hover */
+.form_radio_btn label:hover {
+	color: #666;
 }
