--- a/task06.02Classwork/views/startPage.ejs
+++ b/task06.02Classwork/views/startPage.ejs
@@ -4,7 +4,7 @@
     <meta charset="utf-8"></meta>
     <!-- <meta name="viewport" content="windth=device-width, initial-scale"> -->
     <title>Registration</title>
-    <!-- <link rel='stylesheet' href='/styles/main.css' /> -->
+    <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
   </head>
   <body>
